fix(): overflow on device preview small screens

--- a/src/components/global/Playground/playground.css
+++ b/src/components/global/Playground/playground.css
@@ -47,6 +47,8 @@
 
   margin: 18px 0;
   padding: 16px 0;
+
+  overflow: auto;
 }
 
 .playground__control-toolbar {
